@startuml
'https://plantuml.com/class-diagram

abstract class GiaiThuong{
    String tenGiai
    List<String> soTrungThuongs;

    GiaiThuong giaiKeTiep(GiaiThuong keTiep)
    void doVeSo(String veSo)
}


class GiaiThongThuong

class GiaiUt

GiaiThongThuong ---|> GiaiThuong
GiaiThongThuong ---> GiaiThuong : keTiep

GiaiUt ---|> GiaiThuong

note top of GiaiThongThuong

    doVeSo(String veSo){
        Duyệt qua các chuỗi s trong soTrungThuongs
            Nếu veSo kết thúc bằng chuỗi s
                In thông báo trúng giải
                return

        Chuển vé số cho giải kế tiếp
    }
end note

GiaiThuong <|-- GiaiKK

GiaiKK ---> GiaiThuong : keTiep

@enduml